--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 </li>
                 <li><b>I'm good at...(aside from tech)</b>
                   <ul>
-                    <li><b>Teaching something</b>：When in JSL, where I recieved programming course, I had some background in coding because of requied courses in uni. So I didn't have that much trouble understanding Java firsthand. But since my colleages in the same course had zero experiences in coding whatsoever, they were in big trouble. So I made an <a class="text-light fw-bold" target="_blank" href="https://github.com/Kade-JSL/JSL56-Lectures"><i class="bi bi-box-arrow-up-right"></i>GitHub repo(in Korean, obviously)</a> of lecture memos, source codes of homework, and other docs to help my colleages. I like to help people to understand something, and outside of helping someone, I'm very into organizing docs, generally speaking.</li>
+                    <li><b>Teaching something</b>: When in JSL, where I recieved programming course, I had some kind of background in coding because of requied coding-related subjects in uni. So I didn't have that much trouble understanding Java firsthand. But since my colleages in the same course had zero experiences in coding whatsoever, they were in big trouble. So I made an <a class="text-light fw-bold" target="_blank" href="https://github.com/Kade-JSL/JSL56-Lectures"><i class="bi bi-box-arrow-up-right"></i>GitHub repo(in Korean, obviously)</a> of lecture memos, source codes of homework, and other docs to help my colleages. I like to help people to understand something, and outside of helping someone, I'm very into organizing docs, generally speaking.</li>
                     <li>Japanese: Not manga or anime level, I mean business. Did japanese for jobs, can talk to Japanese people without any linguistic difficulties. Also this site is in Korean and Japanese, all translated by myself.</li>
-                    <li>Searching: I generally like searching the web. From jellyfishes' ecology, to Volcano research facilities in Kagoshima, whatever my curiosity desires.</li>
+                    <li>Searching: I generally like searching the web for any information. Software develepment needs a ton of searching on the web, and I'm pretty good at it, especially for coming up with search keywords, and make complete information out of their results.</li>
                   </ul>
                 </li>
               </ul>
@@ -233,10 +233,62 @@
           class="accordion-collapse collapse">
           <div class="accordion-body">
             <div lang="en">
-              WIP(Japanese only yet, sorry...)
+              <ul>
+                <li><b>Java</b>: Learned in 1.8. Recieved professional education, and done some serious project with it.
+                  <ul>
+                    <li>JSP/Servlet</li>
+                    <li>Spring: Learned in STS 3.
+                      <ul>
+                        <li>Spring MVC</li>
+                        <li>Brief concept of DI/IoC</li>
+                        <li>Introductory REST API</li>
+                      </ul>
+                    </li>
+                    <li>Maven</li>
+                    <li>Apache Tomcat: 8.5
+                      <ul>
+                        <li>Simple config, WAR deployment</li>
+                        <li>Connecting JDBC</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li><b>SQL</b>: Learned with Oracle Database 11gR2 XE. Intermediate level of DB design, <code>JOIN</code> queries and subqueries.</li>
+                <li><b>HTML/CSS</b>: This page's also purely written on HTML/CSS, using Bootstrap 5, which I feel a little like cheating.</li>
+                <li><b>JavaScript</b>: Have basic knowledge on its syntax, but don't know outside of jQuery and <code>$.ajax()</code>.</li>
+                <li><b>Docker</b>: Self-taught or rather StackOverflow-taught to say, but I'm good enough to help my project to deploy the WAR of it to the public web. My web database is also in Docker, and also is my reverse proxy.</li>
+                <li><b>C/C++</b>: As required subject in uni. Learned only just basic syntaxes and OOP.</li>
+                <li><b>Python</b>: Self-taught, basic syntaxes.</li>
+              </ul>
             </div>
             <div lang="ko">
-              WIP(아직은 일본어로만 작성되어 있습니다. 죄송합니다.)
+              <ul>
+                <li><b>Java</b>: 1.8로 배웠습니다. 전문적인 교육을 받고, 프로젝트를 수행하였습니다.1.8で学びました。専門的な教育を受けて、プロジェクトをしたこともあります。
+                  <ul>
+                    <li>JSP/Servlet</li>
+                    <li>Spring: STS 3으로 배웠습니다.
+                      <ul>
+                        <li>Spring MVC</li>
+                        <li>DI/IoC 개념</li>
+                        <li>REST API 입문</li>
+                      </ul>
+                    </li>
+                    <li>Maven</li>
+                    <li>Apache Tomcat: 8.5
+                      <ul>
+                        <li>간단한 설정 및 WAR 배포</li>
+                        <li>JDBC 연동</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li><b>SQL</b>오라클 DB 11g XE로 배웠습니다. 간단한 DB 설계와 쿼리 설계가 가능합니다.</li>
+                <li><b>HTML/CSS</b>: 이 페이지도 순수하게 HTML/CSS로만 썼습니다. Bootstrap 5를 썼어서 약간 치트 같긴 합니다만...</li>
+                <li><b>JavaScript</b>: 기본적인 문법은 거의 알고 있고, jQuery 정도도 쓸 수 있습니다.</li>
+                <li><b>Docker</b>: 독학한 거지만, 제 Java 프로젝트에 도움이 될 정도까지는 배웠습니다. DB도 도커 컨테이너로 얹었고, 웹 서버도 컨테이너에, 역방향 프록시도 컨테이너에 얹어서 웹에 적절하게 개방할 수 있도록 하였습니다.</li>
+                <li><b>C/C++</b>: 전공필수과목이라 배웠습니다. 기본적인 문법이나 OOP 개념 정도만 알고 있습니다.</li>
+                <li><b>Python</b>: 기본적인 문법만 알고 있습니다.</li>
+              </ul>
             </div>
             <div lang="ja">
               <ul>
@@ -260,7 +312,7 @@
                   </ul>
                 </li>
                 <li><b>SQL</b>：Oracleデータベース11gXEで学びました。簡単なDB設計とクエリ設計ができます。</li>
-                <li><b>HTML/CSS</b>：このページもBootstrap 5で作りました！</li>
+                <li><b>HTML/CSS</b>：このページも純粋なHTML/CSSコードで書きました！Bootstrap 5ですが。</li>
                 <li><b>JavaScript</b>：基本的な文法はほとんど知っていて、jQueryも使えます。</li>
                 <li><b>Docker</b>：独学ですが、Javaのプロジェクトをする時に大変役に立ちました。TomcatのコンテナとOracleデータベースのコンテナを使ってプロジェクトのウェブアプリケーションをホストしています。</li>
                 <li><b>C/C++</b>：専攻必須科目として学びました。基本だけ知っています。</li>
