portfolio 1 is down

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <nav>
     <code class="position-absolute top-0 start-0 ms-2 mt-2" style="font-size: 0.7rem; color: var(--bs-light);">
       <span lang="en">Last updated </span>
-      <span lang="ja">最終更新日付：</span>2023/06/10<span lang="ko"> 기준</span>
+      <span lang="ja">最終更新日付：</span>2023/06/22<span lang="ko"> 기준</span>
     </code>
     <div class="fixed-top input-group langselect me-2 mt-2">
       <label for="langtoggle" class="input-group-text"><i class="bi bi-globe"></i></label>
@@ -364,7 +364,11 @@
                     <li><b>期間</b>：2023.01~2023.02</li>
                     <li><b>重点機能</b>：会員登録、掲示板のCRUD、コメント</li>
                     <li><b>プロジェクト発表資料</b>：<a class="text-light" target="_blank" href="./resources/portfolio1-presentation.pdf">「実際に使える私のブログを目指して」</a></li>
-                    <li><b>結果物(ウェブサイト)</b>：<a class="btn btn-sm btn-dark border border-1 border-light border-opacity-50" target="_blank" href="https://portfolio1.saihyou.dev/"><i class="bi bi-box-arrow-up-right"></i>&nbsp;こちら！</a></li>
+                    <li><b class="text-decoration-line-through">結果物(ウェブサイト)</b>：<a class="btn btn-sm btn-dark border border-1 border-light border-opacity-50 text-decoration-line-through" target="_blank" href="https://portfolio1.saihyou.dev/"><i class="bi bi-box-arrow-up-right"></i>&nbsp;こちら！</a>
+                      <ul>
+                        <li>申し訳ありません。現在(2023/06/22)データベースに連携できないエラーは生じており、ただいま原因を調査中です。なるべく早めにページを再開できるよう尽力します。</li>
+                      </ul>
+                    </li>
                     <li><b>使用技術・ツール</b>
                       <ul>
                         <li><b>開発環境</b>：Eclipse 2020-06(4.16.0)</li>
