Completed English translation

--- a/index.html
+++ b/index.html
@@ -352,7 +352,33 @@
           class="accordion-collapse collapse">
           <div class="accordion-body">
             <div lang="en">
-              WIP(Japanese only yet, sorry...)
+              <ol>
+                <li><b>Blog Project</b>
+                  <ul>
+                    <li><b>Period</b>: 2023.01~2023.02</li>
+                    <li><b>Core features</b>: Sign up/in, CRUD of bulletin boards, comments</li>
+                    <li><b>Project Presentation</b>: <a class="text-light" target="_blank" href="./resources/portfolio1-presentation.pdf">「実際に使える私のブログを目指して」(in Japanese)</a></li>
+                    <li><b>Result(Website)</b>: <a class="btn btn-sm btn-dark border border-1 border-light border-opacity-50" target="_blank" href="https://portfolio1.saihyou.dev/"><i class="bi bi-box-arrow-up-right"></i>&nbsp;This!</a></li>
+                    <li><b>Tools and skills</b>
+                      <ul>
+                        <li><b>Development Environment</b>: Eclipse 2020-06(4.16.0)</li>
+                        <li>JSP/Servlet: JSTL</li>
+                        <li>Apache Tomcat</li>
+                        <li>Oracle DB 11.2.0 XE</li>
+                        <li>HTML/CSS: Bootstrap 3</li>
+                        <li>JavaScript: jQuery、Ajax</li>
+                        <li>Docker: For deploying and hosting of project's website</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li><b>(Not finished)Merch Shop Project</b>
+                  <ul>
+                    <li>Core features: Features that were in Blog Project, shopping cart, admin page</li>
+                    <li>Being developed locally, there's no link to show.</li>
+                  </ul>
+                </li>
+              </ol>
             </div>
             <div lang="ko">
               WIP(아직은 일본어로만 작성되어 있습니다. 죄송합니다.)
@@ -415,7 +441,36 @@
           class="accordion-collapse collapse">
           <div class="accordion-body">
             <div lang="en">
-              WIP(Japanese only yet, sorry...)
+              <ul>
+                <li>I'm really into it these days.</li>
+                <li>Using docker, I self-hosted...
+                  <ul>
+                    <li>Sample websites for portfoilos</li>
+                    <li>Database for the websites(Oracle 11g XE)</li>
+                    <li>Web application server(Apache Tomcat)</li>
+                  </ul>
+                </li>
+                <li>by containerizing them, and allocated subdomains by using reverse proxy(Nginx Proxy Manager).</li>
+                <li>Aside from web things, I also self-hosted...
+                  <ul>
+                    <li>Password manager and 2FA(BitWarden)</li>
+                    <li>Git repository server(Gogs)</li>
+                    <li>CI/CD pipeline(Jenkins)</li>
+                    <li>Notetaking(Joplin)</li>
+                  </ul>
+                </li>
+                <li>for my quality of life.</li>             
+                <li>
+                  By the way, this page is deployed and hosted on GitHub Pages.(<a href="https://github.com/saihyou72/saihyou72.github.io" class="text-light fw-bold" target="_blank"><i class="bi bi-box-arrow-up-right"></i>repository link</a>)
+                  <ul>
+                    <li>Being completely static site, I wanted hosting to be simple.</li>
+                    <li>The domain "saihyou.dev" has been bought in Google Domains(soon it'll be Squarespace Domains though...).</li>
+                    <li>And I manage the domain in Cloudflare as my main domain.</li>
+                    <li>And Cloudflare also has my subdomain records pointing at the same ip, Nginx Proxy Manager routes each applications by the subdomain.</li>
+                  </ul>                  
+                </li>
+                <li>I installed Docker on my Synology NAS, but eventually I want a dedicated server for all of them.</li>
+              </ul>
             </div>
             <div lang="ko">
               WIP(아직은 일본어로만 작성되어 있습니다. 죄송합니다.)
@@ -436,6 +491,7 @@
                     <li>パスワードマネージャー及び二段階認証(BitWarden)</li>
                     <li>Gitリポジトリ管理(Gogs)</li>
                     <li>CI/CDパイプライン(Jenkins)</li>
+                    <li>メモ整理・保管(Joplin)</li>
                   </ul>
                 </li>
                 <li>などもセルフホスティングでやっています。</li>             
